[package]
name = "railtube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.11.27", features = ["blocking"] }
tempfile = "3.22"

[[bin]]
name = "railtube"
path = "src/main.rs"
